objects/Project_Budget__c.object
<CustomObject>
    <label>Project Budget</label>
    <nameField>
        <displayFormat>PBU-{00000000}</displayFormat>
        <label>Project Budget</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <formula>CASE(
    Type__c,
    &quot;Manual&quot;, Manual_Budget__c,
    &quot;Opportunity&quot;, Opportunity_Amount__c,
    &quot;Opportunity Product&quot;, Opportunity_Product_Total_Price__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Budget_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <inlineHelpText>8 character Nickname for this Budget.</inlineHelpText>
        <label>Nickname</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_hrs__c</fullName>
        <formula>CASE(
    Type__c,
    &quot;Manual&quot;, Manual_Budget_hrs__c,
    &quot;Opportunity&quot;, Opportunity_Quantity_hrs__c,
    &quot;Opportunity Product&quot;, Opportunity_Product_Quantity_hrs__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Budgets</relationshipLabel>
        <relationshipName>Project_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Budget__c</fullName>
        <label>Manual Budget ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selected_Budget__c</fullName>
        <label>Selected Budget ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Budget_hrs__c</fullName>
        <formula>IF(Manual_Budget_dphr__c != 0 , Manual_Budget__c /Manual_Budget_dphr__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manual Budget (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_hrs_weekday__c</fullName>
        <formula>Budget_hrs__c /  Project__r.Duration_weekdays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget (hrs/weekday)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Budget_dphr__c</fullName>
        <inlineHelpText>The weighted average rate of multiple resources or roles, combining their individual rates into a single, unified rate per unit of work.</inlineHelpText>
        <label>Manual Budget ($/hr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Product</label>
        <referenceTo>OpportunityLineItem</referenceTo>
        <relationshipName>Project_Budget_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Budget_hrs__c</fullName>
        <label>Selected Budget (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Quantity_hrs__c</fullName>
        <formula>Opportunity__r.TotalOpportunityQuantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Quantity (hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Total_Price__c</fullName>
        <formula>Opportunity_Product__r.TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product Total Price ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Quantity_hrs__c</fullName>
        <formula>Opportunity_Product__r.Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product Quantity (hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>